// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-checkbox aria-label 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    aria-label="Text prop aria-label"
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <!---->
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox default 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-disabled"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox error 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--has-error"
>
  <input
    aria-describedby="fakeId"
    aria-invalid="true"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
       Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--has-error m--has-validation-message"
>
  <input
    aria-describedby="fakeId"
    aria-invalid="true"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
       Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <p
      aria-live="polite"
      class="m-validation-message__error"
    >
      <svg
        class="m-svg m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        This is an error
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
  focus="true"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
       Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox indeterminate 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-indeterminate"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox label 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
  label="label"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox position=right 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-readonly"
>
  <input
    aria-describedby="fakeId"
    id="mCheckbox-fakeId"
    type="hidden"
    value="false"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-valid"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
       Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox value 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox verticalAlign=center 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam placeat dolores esse libero ipsum, officiis asperiores! Distinctio quis, deleniti placeat, hic aperiam quia magnam accusantium at eaque voluptatum ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quia culpa quas distinctio sapiente assumenda, soluta obcaecati ipsam reprehenderit aperiam eos blanditiis aspernatur provident libero quod modi quos iusto molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ut consequuntur tempore fuga nihil quibusdam officia deleniti nesciunt, ullam eveniet explicabo unde alias, esse asperiores. Corrupti officiis sunt voluptatibus iure? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, est! Optio ipsum voluptates alias vel quos!
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox verticalAlign=top 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checkbox-top"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam placeat dolores esse libero ipsum, officiis asperiores! Distinctio quis, deleniti placeat, hic aperiam quia magnam accusantium at eaque voluptatum ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quia culpa quas distinctio sapiente assumenda, soluta obcaecati ipsam reprehenderit aperiam eos blanditiis aspernatur provident libero quod modi quos iusto molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ut consequuntur tempore fuga nihil quibusdam officia deleniti nesciunt, ullam eveniet explicabo unde alias, esse asperiores. Corrupti officiis sunt voluptatibus iure? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, est! Optio ipsum voluptates alias vel quos!
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right default 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-disabled"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right error 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--has-error"
>
  <input
    aria-describedby="fakeId"
    aria-invalid="true"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--has-error m--has-validation-message"
>
  <input
    aria-describedby="fakeId"
    aria-invalid="true"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <p
      aria-live="polite"
      class="m-validation-message__error"
    >
      <svg
        class="m-svg m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        This is an error
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
  focus="true"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right indeterminate 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-indeterminate"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-readonly"
>
  <input
    aria-describedby="fakeId"
    id="mCheckbox-fakeId"
    type="hidden"
    value="false"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-valid"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/position=right value 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/value disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-disabled"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/value error 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--has-error"
>
  <input
    aria-describedby="fakeId"
    aria-invalid="true"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/value error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--has-error m--has-validation-message"
>
  <input
    aria-describedby="fakeId"
    aria-invalid="true"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <p
      aria-live="polite"
      class="m-validation-message__error"
    >
      <svg
        class="m-svg m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        This is an error
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/value focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
  focus="true"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/value indeterminate 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/value readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-readonly"
>
  <input
    aria-describedby="fakeId"
    id="mCheckbox-fakeId"
    type="hidden"
    value="true"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-checkbox/value valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-valid"
>
  <input
    aria-describedby="fakeId"
    class="m-checkbox__hidden"
    id="mCheckbox-fakeId"
    type="checkbox"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-fakeId"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <div
      class="m-checkbox__label"
    >
      A Checkbox
    </div>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;
